test/sh/error/no_same_name_aliases.sk
some_alias := int
some_alias := float
